finalizando tela de revisão de informações

--- a/pages/metodo_de_pagamento.html
+++ b/pages/metodo_de_pagamento.html
@@ -88,12 +88,12 @@
 
             <section id="content">
                 <section id="main-panel">
-                    <div class="content-margin">
+                    <div class="content-margin main-size">
                         <h3>RANGER XL Cabine Simples 2.2 Diesel 4x4 MT 2023</h3>
                         <h5>Modelo: XXXXXX-XXX</h5>
                     </div>
                     
-                    <div id="paying-methods" class="content-margin">
+                    <div id="paying-methods" class="content-margin main-size">
                         <h4>Opções de pagamento</h4>
 
                         <span id="method-selector">
