--- a/pages/pagamento_confirmado.html
+++ b/pages/pagamento_confirmado.html
@@ -83,65 +83,19 @@
             </div>
 
             <div id="progress-bar">
-                <span><img src="../images/progress-bar-2.svg" alt=""></span>
+                <span><img src="../images/progress-bar-3.svg" alt=""></span>
             </div>
 
-            <section id="content">
+            <section>
                 <section id="main-panel">
-                    <div class="content-margin main-size">
+                    <div class="content-margin">
                         <h3>RANGER XL Cabine Simples 2.2 Diesel 4x4 MT 2023</h3>
                         <h5>Modelo: XXXXXX-XXX</h5>
                     </div>
                     
                     <div id="paying-methods">
-                        <div class="content-margin main-size flex">
-                            <div id="dados-pessoal">
-                                <h4>Informações pessoais</h4>
-                                <div class="card">
-                                    <p>teste</p>
-                                </div>
-                            </div>
-                            <div>
-                                <h4>Forma de pagamento</h4>
-                                <div id="dados-pagamento" class="card">
-                                </div>
-                            </div>                       
+                        <div class="content-margin">                  
                         </div>                   
-                    </div>
-
-                    <div id="entrega" class="content-margin main-size">
-                        <span>
-                            <h4>Entrega:</h4>
-
-                            <button onclick="formatarRadio(this)" class="radio">
-                                <input type="radio" name="entrega" value="endereco">
-                                <p>Retirar no endereço</p>
-                            </button>
-    
-                            <button onclick="formatarRadio(this)" class="radio">
-                                <input type="radio" name="entrega" value="combinar">
-                                <p>Definir com o vendedor</p>
-                            </button>
-                        </span>                    
-                    </div> 
-                </section>
-                <section id="side-bar">
-                    <h2>R$ <span id="preco">100.000</span></h2>
-
-                    <button onclick="tipoEntrega()" class="botao-lateral botao-primario" href="">
-                        Confirmar compra
-                    </button>
-
-                    <div id="perfil">
-                        <h5>Sobre o vendedor</h5>
-                        <img src="../images/perfil.svg" alt="">
-                        <div>
-                            <p class="bold">Localização:</p>
-                            <p>Bahia</p>
-                        </div>
-                        <button onclick="tipoEntrega()" class="botao-lateral botao-secundario" href="">
-                            Enviar mensagem
-                        </button>
                     </div>
                 </section>
             </section>
