finalizando tela de confirmação de pagamento

--- a/pages/pagamento_confirmado.html
+++ b/pages/pagamento_confirmado.html
@@ -78,7 +78,7 @@
                 </a>
                 
                 <h1>
-                    Revisão de informações
+                    Comfirmação de pagamento
                 </h1>
             </div>
 
@@ -89,13 +89,23 @@
             <section>
                 <section id="main-panel">
                     <div class="content-margin">
-                        <h3>RANGER XL Cabine Simples 2.2 Diesel 4x4 MT 2023</h3>
-                        <h5>Modelo: XXXXXX-XXX</h5>
+                        <h2><i class="fa-solid fa-circle-check"></i> Pagamento aprovado</h2>
                     </div>
+
                     
-                    <div id="paying-methods">
-                        <div class="content-margin">                  
-                        </div>                   
+                    <div id="paying-methods" class="info">
+                        <div id="info-compra">    
+                            <div class="info-geral sucesso">
+                                <h4>Seu pedido foi realizado com sucesso</h4>
+                                <p>Em breve você receberá em seu e-mail todos os detalhes de seu pedido.</p>  
+                            </div>
+                            <div class="info-geral">
+                                <h4>Informações da compra</h4>
+                                <p id="id-compra">Pedido número XXXXXX</p> 
+                                <p>RANGER XL Cabine Simples 2.2 Diesel 4x4 MT 2023</p>
+                                <p>Preço</p>
+                            </div>  
+                        </div>                              
                     </div>
                 </section>
             </section>
