Integrando com o node.js

--- a/pages/metodo_de_pagamento.html
+++ b/pages/metodo_de_pagamento.html
@@ -418,6 +418,7 @@
         </footer> <!-- Fim do Footer -->
     </body>
     
+    <script src="../js/autenticar.js"></script>
     <script src="../js/metodo_de_pagamento.js"></script>
     <script src="../js/vencimento.js"></script>
     <script src="../js/formatar_inputs.js"></script>
