Correção do readme

--- a/pages/usuarios.html
+++ b/pages/usuarios.html
@@ -32,7 +32,7 @@
             <input id="login-email" style="display: block;" type="text">
             <label for="">Senha</label>
             <input id="login-senha" style="display: block;" type="text">
-            <button onclick="verificarCliente()" id="login" style="margin-top: 10px; display: inline-block;">Cadastrar</button>
+            <button onclick="verificarCliente()" id="login" style="margin-top: 10px; display: inline-block;">Login</button>
         </div>
     </body>
 
