Adicionado autenticação em todas as páginas

--- a/pages/pagamento_confirmado.html
+++ b/pages/pagamento_confirmado.html
@@ -375,6 +375,7 @@
         </footer> <!-- Fim do Footer -->
     </body>
 
+    <script src="../js/autenticar.js"></script>
     <script src="../js/formatar_inputs.js"></script>
     <script src="../js/dados_compra.js"></script>
 </html>
