Atualização do header e foote

--- a/pages/template.html
+++ b/pages/template.html
@@ -16,21 +16,22 @@
     <body>
         <!-- Início do Header -->
         <header>
-            <img class="logo" src="../images/fbr-ford-logo-header-footer.webp" alt="logo ford">
-
-            <nav id="main-nav">            
+            <nav id="main-nav">    
                 <ul class="navbar">
                     <li>
+                        <img class="logo" src="../images/fbr-ford-logo-header-footer.webp" alt="logo ford">                 
+                    </li>
+                    <li class="veiculos">
                         <a href="">
                             Veículos
                         </a>
                     </li>
-                    <li>
+                    <li class="vender">
                         <a href="">
                             Vender
                         </a>
                     </li>
-                    <li>
+                    <li class="sobre">
                         <a href="">
                             Sobre
                         </a>
